# LLMForgeKit

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
examples/: dynamic_prompt_example.py  openai_example.py  parser_example.py  workflow_example.py
src/llmforgekit/: __init__.py
src/llmforgekit/core/: __init__.py  base.py  config.py  errors.py  logging.py
src/llmforgekit/services/: __init__.py
src/llmforgekit/services/llm/: __init__.py  base.py  openai.py
src/llmforgekit/services/parser/: __init__.py  aligner.py  base.py  json_parser.py  semantic_parser.py
src/llmforgekit/services/prompt/: __init__.py  dynamic.py  library.py  templates.py
src/llmforgekit/services/workflow/: agent.py  context.py  engine.py  steps.py
tests/core/: test_base.py  test_config.py  test_errors.py  test_logging.py
tests/services/: test_dynamic_prompt.py  test_openai.py  test_parser.py  test_prompt.py  test_workflow.py
