[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmforgekit"
version = "0.1.0"
description = "A toolkit for building LLM-powered applications"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Krishna Prasad Siddhardha varma", email = "krishnaprasadmudunuri@gmail.com"}
]
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "typer>=0.7.0",  # For CLI
    "rich>=12.0.0",  # For better CLI output
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
]